2007-01-19  Jens Lautenbacher  <jtl@schlund.de>

	* projects/core/build/create_depend.xsl: Allow for more than one
	variant of the master and metatags file in one project by adding a
	"name" attribute to standardmaster and standardmetatags (default
	empty) and a "master" and "metatags" attribute to
	standardpage (also empty by default). Using "name" of
	standardmaster or standardmetatags results in master-NAME.xsl or
	metatags-NAME.xsl targets to be defined which can be referred to in
	standardpage by using <standardpage master="NAME" metags="NAME" ...>

2007-01-19  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixxml/config/impl/CommonServletConfig.java: 
	* src/de/schlund/pfixxml/config/impl/ContextXMLServletConfigImpl.java: 
	* src/de/schlund/pfixxml/config/impl/DirectOutputServletConfigImpl.java: 
	* src/de/schlund/pfixxml/config/impl/DirectPagerequestRule.java: 
	* src/de/schlund/pfixxml/config/impl/ServletInfoEditModeRule.java: 
	* src/de/schlund/pfixxml/config/impl/ServletInfoRule.java: 
	* projects/core/schema/configfragments200609.xsd: 
	* projects/core/schema/properties200401.xsd: 
	* projects/sample1/conf/direct.conf.xml: 
	* projects/sample1/conf/fragments.xml: 
	Added support for includes in configuration for the direct output server.
	Deprecated depend and editmode configuration options for direct output server
	because the were not used.

2007-01-18  Martin Leidig  <mleidig@schlund.de>

	Added classhinting support to the JSON protocol. Classhinting can 
	be enabled/disabled within the webservice configuration file using
	the json element with the boolean classhinting attribute (globally
	or service specific). By default classhinting is disabled.

	* src/de/schlund/pfixcore/webservice/jsonws/JSONSerializer.java
	* src/de/schlund/pfixcore/webservice/jsonws/Bean.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java
	* src/de/schlund/pfixcore/webservice/config/ServiceConfig.java